ST-7: Fix